--- a/app/Resources/views/item-bank-exercise/tabs/list/chapter-list.html.twig
+++ b/app/Resources/views/item-bank-exercise/tabs/list/chapter-list.html.twig
@@ -1,6 +1,6 @@
 {% do script(['vue3/js/item-bank-exercise/tabs/list/index.js']) %}
 
-<div id="chapter-list"
+<div id="vue3-item-bank-exercise-list"
      data-category-tree="{{ categoryTree|json_encode }}"
      data-records="{{ records|json_encode }}"
      data-preview-as="{{ previewAs }}"
