--- a/app/Resources/views/open-course/open-course-show.html.twig
+++ b/app/Resources/views/open-course/open-course-show.html.twig
@@ -49,7 +49,7 @@
   <div class="open-course-detail row">
     <div class="col-md-9">
       <div style="border-radius: 4px; border: 1px solid #e4ecf3; background: #fff; margin-bottom: 20px">
-        <div id="open-course-detail" data-course="{{ course | json_encode }}" data-as="{{ app.request.get('as')|default('') }}"></div>
+        <div id="vue3-open-course-detail" data-course="{{ course | json_encode }}" data-as="{{ app.request.get('as')|default('') }}"></div>
       </div>
     </div>
 
